feat(backend): password recovery email sending (#3)
